# KooSimulationDataReader

./: .gitignore  BUILD_GUIDE_KR.md  CMakeLists.txt  KEYWORD_ISSUES_KR.md  PROJECT_STATUS_KR.md  ROADMAP.md
.claude/: settings.json
Manuals/OpenRadioss/keyword_manual/: 01_NODE_ELEMENTS.md  02_MATERIALS.md  03_PROPERTIES.md  04_FAILURE.md  05_INTERFACES.md  06_LOADS_BC.md  07_INITIAL_CONDITIONS.md  08_CONSTRAINTS.md  09_CONTROL_OUTPUT.md  10_GROUPS_SETS.md  11_SENSORS.md  12_ALE_SPH.md  13_AIRBAG.md  14_THERMAL.md  15_FUNCTIONS_TABLES.md  16_PARAMETERS.md  17_LAMINATE_PLY.md  18_FRICTION.md  19_EOS.md  20_TRANSFORM.md  21_ADVANCED.md  22_CONTROL_CARDS.md  23_RIGID_WALL.md  24_SYSTEM_SKEW.md  25_MISC.md  26_SEATBELT.md  27_BODY_CLUSTER.md  28_LAGMUL.md  README.md
Manuals/OpenRadioss/technical/: DYNAIN_ANALYSIS.md  LSDYNA_KEYWORD_SUPPORT.md
Manuals/Text/ODB/: odb_spec_user.txt
build-phase5/: CMakeCache.txt  CTestTestfile.cmake  KooSimConfig.cmake  Makefile  cmake_install.cmake
build-phase5/cli/: Makefile  cmake_install.cmake
build-phase5/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-phase5/lib/: libgmock.so.1.14.0  libgtest.so.1.14.0  libgtest_main.so.1.14.0
build-phase5/src/: Makefile  cmake_install.cmake
build-phase5/src/cad/: Makefile  cmake_install.cmake
build-phase5/src/mesh/: Makefile  cmake_install.cmake
build-phase5/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  koo_cad_tests[1]_include.cmake  koo_dyna_tests[1]_include.cmake  koo_ecad_tests[1]_include.cmake  koo_ecad_tests[1]_tests.cmake  koo_mesh_tests[1]_include.cmake  koo_sim_tests[1]_include.cmake
cli/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  FindGmsh.cmake  FindOpenCASCADE.cmake  KooSimConfig.cmake.in  Platform.cmake
docs/: BATCH_MESHING_GUIDE.md  ECAD_STRATEGY.md  KEYWORD_PROGRESS.md  MCAD_STRATEGY.md  MESH_GENERATION_OVERVIEW.md  STRUCTURED_MESH_GUIDE.md
examples/: CMakeLists.txt  batch_mesh_generation.cpp  batch_mesh_with_materials.cpp  cad_import_step.cpp  geometry_workflow.cpp  manager_basic_usage.cpp  manager_unified_api.cpp  mesh_generation.cpp  structured_mesh_generation.cpp
include/koo/: Export.hpp  Version.hpp
include/koo/cad/: CADTypes.hpp  Geometry.hpp  ICADImporter.hpp  OccadImporter.hpp
include/koo/common/: Vec3.hpp
include/koo/dyna/: Airbag.hpp  Ale.hpp  Boundary.hpp  Cese.hpp  Chemistry.hpp  Constrained.hpp  Contact.hpp  Control.hpp  Curve.hpp  Damping.hpp  Database.hpp  Define.hpp  DeformableToRigid.hpp  Dualcese.hpp  Element.hpp  Em.hpp  Eos.hpp  Frequency.hpp  Hourglass.hpp  Icfd.hpp  Implicit.hpp  Include.hpp  Initial.hpp  Integration.hpp  Interface.hpp  Keyword.hpp  KeywordFactory.hpp  KeywordFileReader.hpp  KeywordFileWriter.hpp  Load.hpp  MatAdd.hpp  Material.hpp  Model.hpp  ModelVisitor.hpp  Node.hpp  Parameter.hpp  Part.hpp  Perturbation.hpp  Rigidwall.hpp  Section.hpp  (+7 more)
include/koo/dyna/managers/: ContactManager.hpp  ElementManager.hpp  GeometryManager.hpp  LoadManager.hpp  ModelManager.hpp  NodeManager.hpp  PartManager.hpp  SetManager.hpp
include/koo/ecad/: EdaData.hpp  Feature.hpp  Layer.hpp  OdbJob.hpp  OdbReader.hpp  OdbWriter.hpp  Step.hpp  Symbol.hpp  Types.hpp
include/koo/mesh/: GmshMeshGenerator.hpp  IMeshGenerator.hpp  MeshData.hpp  MeshParameters.hpp  MeshQuality.hpp  MeshTypes.hpp
include/koo/util/: CardParser.hpp  Math.hpp  StringUtils.hpp  Types.hpp
src/: CMakeLists.txt
src/cad/: CMakeLists.txt  Geometry.cpp  ICADImporter.cpp  OccadImporter.cpp
src/dyna/: Airbag.cpp  Ale.cpp  Boundary.cpp  Cese.cpp  Chemistry.cpp  Constrained.cpp  Contact.cpp  Control.cpp  Damping.cpp  Database.cpp  Define.cpp  DeformableToRigid.cpp  Dualcese.cpp  Element.cpp  Em.cpp  Eos.cpp  Frequency.cpp  Hourglass.cpp  Icfd.cpp  Implicit.cpp  Include.cpp  Initial.cpp  Integration.cpp  Interface.cpp  Keyword.cpp  KeywordFactory.cpp  KeywordFileReader.cpp  KeywordFileWriter.cpp  Load.cpp  MatAdd.cpp  Material.cpp  Model.cpp  Node.cpp  Parameter.cpp  Part.cpp  Perturbation.cpp  Rigidwall.cpp  Section.cpp  Sensor.cpp  Set.cpp  (+5 more)
src/dyna/managers/: ContactManager.cpp  ElementManager.cpp  GeometryManager.cpp  LoadManager.cpp  ModelManager.cpp  NodeManager.cpp  PartManager.cpp  SetManager.cpp
src/ecad/: EdaData.cpp  Feature.cpp  Layer.cpp  OdbJob.cpp  OdbReader.cpp  OdbWriter.cpp  Step.cpp  Symbol.cpp
src/mesh/: CMakeLists.txt  GmshMeshGenerator.cpp  IMeshGenerator.cpp
src/util/: CardParser.cpp  StringUtils.cpp
tests/: CMakeLists.txt
tests/integration/: TestOdbReaderIntegration.cpp
tests/unit/: TestCardParser.cpp  TestEdaData.cpp  TestElement.cpp  TestFeature.cpp  TestGeometry.cpp  TestKeywordFileReader.cpp  TestKeywordFileWriter.cpp  TestLayer.cpp  TestMaterial.cpp  TestMeshParameters.cpp  TestMeshQuality.cpp  TestModel.cpp  TestModelVisitor.cpp  TestNode.cpp  TestOdbJob.cpp  TestOdbReader.cpp  TestOdbWriter.cpp  TestPart.cpp  TestSection.cpp  TestStringUtils.cpp  TestSymbol.cpp
